--- a/Server/Server/Server.csproj
+++ b/Server/Server/Server.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encryption.cs" />
     <Compile Include="Mouse.cs" />
     <Compile Include="ServerC.cs" />
     <Compile Include="ServerForm.cs">
